# rf-statistics

./: LICENSE  Makefile  README.md  environment.yaml  pyproject.toml
moe/: rf_interactions.svl
rf_statistics/: __init__.py  atom_geometries.py  atom_type_assignment.py  bootstrap_effect.py  complex_and_los_df.py  los_analysis.py  los_descriptors.py  los_protein_descriptors.py  p2cq_filter.py  resubmit_failed_jobs.py  rf_assignment.py  rf_hpc.py  rf_plane_plane_analyzer.py  rf_plotter.py  rf_postprocessing.py  rf_stats_csv_to_lsf.py  rf_structure_analysis.py  rf_total_bootstrapping.py  structure_quality.py  total_rf_calculator.py  update_lookup_files.py  utils.py  utils_rdkit.py
rf_statistics/atom_types/: ligand_atom_types.csv  protein_atom_types.csv
rf_statistics/cli/: pose_check_cli.py
rf_statistics/database_utils/: ccdc_library.py  export_central_ligands.py  export_contacts_surfaces.py  extract_binding_site_ligands.py  pdb_quality.py  rdkit_library.py  split_sdf.py
rf_statistics/lookup_files/: global_ligand_lookup_alpha.csv  global_ligand_lookup_distance.csv  global_ligand_lookup_h.csv  global_protein_lookup_alpha.csv  global_protein_lookup_distance.csv  global_protein_lookup_h.csv
rf_statistics/misc/: find_nos.py  ligand_buriedness.py  rf_values_from_pdb_and_sdf.py  tyrosin_count.py
rf_statistics/rf_ligand_alignment/: rf_ligand_alignment.py
tests/: test_los_descriptors.py  test_rf_assignment.py
tests/testdata/: 13GS_013.mol2  1A29_001.mol2  1AD8_001.mol2  1C4U_001.mol2  1NY2_001.mol2  1ny2_001_ligand.sdf  2WPO_001.mol2  3A80_001.mol2  4A5S_002.mol2  (+9 more)
(+7 files in other folders)
